--- a/Site_Web.html
+++ b/Site_Web.html
@@ -1,7 +1,20 @@
 <html>
    <head>
+   	<meta charset="utf-8">
+   	<link rel="stylesheet" type="text/css" href="Style.css">
       <title>Denoliane</title>
    </head>
    <body>
+      <div  class="grid-container">
+         <div class="item1">
+   		<img src="Mon_Image.jpg" alt="Mon_Image" height="50%" width="50%" border="10px"/>
+         </div>
+         <div class="item2"> 
+            <h1>En direct</h1>
+
+         </div>
+      </div>
+
+
    </body>
 </html>
