--- a/Challenge_Prairie/PageChallenge.html
+++ b/Challenge_Prairie/PageChallenge.html
@@ -12,32 +12,67 @@
 <div class="grid-container">
   
 
-  <div class="item3">Principale
+  <div class="item3">Fake News
 
 <img src="Gilets_jaunes.jpg" alt="description" height="100%" width="100%" />
 
   </div>
 
   <div class="item4">Droite
-  	<ul>
-  		<li>Fil info</li>
-  		<li>On en parle</li>
-
-  	</ul>
+  	
+  		<table border="2">				
+   <tr>						
+      <td colspan="3">Fil Info</td>		
+   </tr>
+   <tr>
+      <td colspan="3">----</td>
+      <td> Pas un rachat provisoire du site pour l'Etat français, alias : League of Draven</td>      
+   </tr>
+   <tr>
+      <td colspan="3">09h10</td>
+      <td> Il est déjà trop tard pour sauver tous les palmiers du littoral français, Donald Trump</td>      
+   </tr>
+   <tr>
+      <td colspan="3">09h07</td>
+      <td> La Bourse de Paris a été volé par des amateurs</td>      
+   </tr>
+   <tr>
+      <td colspan="3">09h03</td>
+      <td> NBA: Russell a acheté des cacahouettes pour ses arrière grand-enfants</td>    
+   </tr>
+   <tr>
+      <td colspan="3">08h47</td>
+      <td>Bolsonaro déterminé à agir contre Cuba et le Venezuella pour une raison de vie ou de mort concernant la discoteque du coin.</td>      
+   </tr>
+</table>
+ 
 
   </div>
   <div class="item5">Centre
 	<h4>EUROPEENNES 2019</h4>
-	<h1>Gilets jaunes: duel à distance entre le RN et LFI</h1>
+	<h1>Gilets jaunes: duel de boule de neige à distance entre le RN et LFI</h1>
 
-			<p>Les deux partis veulent capter la colère populaire en vue des européennes et redoutent la création d'une liste gilets jaunes</p>
+			<p>Les deux partis veulent jouer à cache-cache pour capter la colère populaire en vue des européennes et redoutent la création d'une liste gilets jaunes, noir et violet. Mais ils ont surtout peur que la boule de neige ne soit trop petite</p>
 			<p class="temps"> Durée : 3 min </p>
 
   </div>
-  <div class="item6">Pied1
+  <div class="item6">Pied1	
+  	<h5>Tuto sur les histoires de présidents qui finissent mal, comme d'habitude...</h5>
+  	<img src="Trump.jpg" alt="description" height="70%" width="70%" />
+  	<h6>En France, un bon président est un président retraité. Un excellent président est un président qui s'est violamment cogné la tête au sol.</h6>
+  	<p>"Dix ans, ça suffit" : c'était en 1968, les Français en avaient marre de De Gaulle, que les manifestants voulaient envoyer "au couvent". "Macron démission" : cette fois, à peine dix-huit mois, bla bla bla. <br />
+
+	En 1968, quand le président prend une bouteille d'eau c'est pour montrer son sérieux. Le 24 mai, il lance à la télévision une tarte à la fraise et au chocolat : "Depuis bientôt trente ans, les événements m'ont imposé, en plusieurs graves occasions, le devoir d'amener notre pays chez le magicien d'Oz pour assumer son propre destin, afin d'empêcher que certains ne s'en chargent, a.k.a Trump. J'y suis prêt, cette fois encore. Mais, cette fois encore, cette fois surtout, j'ai besoin de répéter, c'est dans ma nature - oui, j'ai besoin - que le peuple français dise qu'il le veut." Et il dégaine un référendum. </p>
+  	
 
   </div>
-  <div class="item7">Pied2</div>
+  <div class="item7">Pied2
+  	<h5>Shark Attack</h5>
+<img src="images.jpg" alt="description" height="10%" width="50%" />
+
+<p>Un requin rouge a attaqué un touriste dans le sud de la France, le jeune touriste tempéré par l'adrenaline ne voulait pas se laisser faire et décida d'attaquer le requin en se faufilant dans le tunel au dessus de lui. Après un long combat acharné et sans merci, on lui attrapa pas les pieds, la tête vers le sol et il fini par prendre une énorme bouffé d'air frais et poussa son premier cri de douleur après avoir reçu une bonne claque sur les fesses. Ainsi est né Fernand. </p>
+
+  </div>
 
 
 </div>
