Avancée du site de l'info

--- a/Challenge_Prairie/PageChallenge.html
+++ b/Challenge_Prairie/PageChallenge.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="Style.css">
+<link rel="stylesheet" type="text/css" href="Style.css" href="headerStyle.css">
+<link rel="stylesheet" type="text/css" href="headerStyle.css">
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 <title>Info</title>
 </head>
 <body class="Main-container" width="75%" align="center">
 
 
-<div class="grid-container">
+<div class="grid-container" style="width:100%">
   
 
   <div class="item3">Fake News
@@ -18,45 +19,53 @@
 
   </div>
 
-  <div class="item4">Droite
+  <div class="item4" style="width:100%">Droite
   	
-  		<table border="2">				
+  				<!-- TABLEAU -->
+
+  		<table style="width:100%">
+
+
    <tr>						
       <td colspan="3">Fil Info</td>		
    </tr>
-   <tr>
+   		<tr>
       <td colspan="3">----</td>
       <td> Pas un rachat provisoire du site pour l'Etat français, alias : League of Draven</td>      
    </tr>
-   <tr>
+   		<tr>
       <td colspan="3">09h10</td>
       <td> Il est déjà trop tard pour sauver tous les palmiers du littoral français, Donald Trump</td>      
    </tr>
-   <tr>
+   		<tr>
       <td colspan="3">09h07</td>
       <td> La Bourse de Paris a été volé par des amateurs</td>      
    </tr>
-   <tr>
+   		<tr>
       <td colspan="3">09h03</td>
       <td> NBA: Russell a acheté des cacahouettes pour ses arrière grand-enfants</td>    
    </tr>
-   <tr>
+   		<tr>
       <td colspan="3">08h47</td>
       <td>Bolsonaro déterminé à agir contre Cuba et le Venezuella pour une raison de vie ou de mort concernant la discoteque du coin.</td>      
    </tr>
 </table>
- 
+  				<!-- TABLEAU -->
 
   </div>
-  <div class="item5">Centre
-	<h4>EUROPEENNES 2019</h4>
-	<h1>Gilets jaunes: duel de boule de neige à distance entre le RN et LFI</h1>
+  		<div class="item5" style="width:100%">	CENTRE
+
+			<h4>EUROPEENNES 2019</h4>
+			<h1>Gilets jaunes: duel de boule de neige à distance entre le RN et LFI</h1>
 
 			<p>Les deux partis veulent jouer à cache-cache pour capter la colère populaire en vue des européennes et redoutent la création d'une liste gilets jaunes, noir et violet. Mais ils ont surtout peur que la boule de neige ne soit trop petite</p>
-			<p class="temps"> Durée : 3 min </p>
+
+			<p class="duree_video"> Durée : 3 min </p>
 
   </div>
-  <div class="item6">Pied1	
+
+
+  <div class="item6" style="width:100%">Pied1	
   	<h5>Tuto sur les histoires de présidents qui finissent mal, comme d'habitude...</h5>
   	<img src="Trump.jpg" alt="description" height="70%" width="70%" />
   	<h6>En France, un bon président est un président retraité. Un excellent président est un président qui s'est violamment cogné la tête au sol.</h6>
@@ -66,8 +75,9 @@
   	
 
   </div>
-  <div class="item7">Pied2
-  	<h5>Shark Attack</h5>
+
+  <div class="item7" style="width:100%">Pied2
+  		<h5>Shark Attack</h5>
 <img src="images.jpg" alt="description" height="10%" width="50%" />
 
 <p>Un requin rouge a attaqué un touriste dans le sud de la France, le jeune touriste tempéré par l'adrenaline ne voulait pas se laisser faire et décida d'attaquer le requin en se faufilant dans le tunel au dessus de lui. Après un long combat acharné et sans merci, on lui attrapa pas les pieds, la tête vers le sol et il fini par prendre une énorme bouffé d'air frais et poussa son premier cri de douleur après avoir reçu une bonne claque sur les fesses. Ainsi est né Fernand. </p>
